--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
