--- a/package.json
+++ b/package.json
@@ -12,26 +12,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@supabase/supabase-js": "^2.49.1",
     "chart.js": "^4.4.8",
+    "date-fns": "^2.30.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "uuid": "^11.1.0",
-    "date-fns": "^2.30.0",
-    "flowbite": "^2.3.0",
-    "flowbite-react": "^0.7.2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
